// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[` 2`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tokyo",
  "country": "JP",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9379911",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "HEALTH",
  ],
  "status": "ACTIVE",
  "type": "COOP",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 3`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tehran",
  "country": "IR",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9899993",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "SOCIAL",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 4`] = `
{
  "error": ""phone" must be a string",
}
`;

exports[` 5`] = `
{
  "causes_tags": [
    "POVERTY",
  ],
  "city": "Tokyo",
  "commitment_hours_higher": "13",
  "commitment_hours_lower": "12",
  "country": "JP",
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "Data testing",
  "experience_level": 1,
  "expires_at": null,
  "geoname_id": null,
  "id": Any<String>,
  "identity_id": Any<String>,
  "impact_job": true,
  "job_category_id": Any<String>,
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "payment_currency": "JPY",
  "payment_range_higher": "13",
  "payment_range_lower": "12",
  "payment_scheme": "FIXED",
  "payment_type": "VOLUNTEER",
  "project_length": "1_3_MONTHS",
  "project_type": "FULL_TIME",
  "promoted": false,
  "remote_preference": "HYBRID",
  "search_tsv": Any<String>,
  "skills": [
    "ANDROID",
    "ANGULARJS",
  ],
  "status": "ACTIVE",
  "title": "Testing 1",
  "updated_at": Any<String>,
  "weekly_hours_higher": "13",
  "weekly_hours_lower": "12",
}
`;

exports[` 6`] = `
{
  "causes_tags": [
    "POVERTY",
  ],
  "city": "Tehran",
  "commitment_hours_higher": "13",
  "commitment_hours_lower": "12",
  "country": "IR",
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "Data testing",
  "experience_level": 1,
  "expires_at": null,
  "geoname_id": null,
  "id": Any<String>,
  "identity_id": Any<String>,
  "impact_job": true,
  "job_category_id": Any<String>,
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "payment_currency": "USD",
  "payment_range_higher": "13",
  "payment_range_lower": "12",
  "payment_scheme": "FIXED",
  "payment_type": "VOLUNTEER",
  "project_length": "LESS_THAN_A_MONTH",
  "project_type": "ONE_OFF",
  "promoted": false,
  "remote_preference": "HYBRID",
  "search_tsv": Any<String>,
  "skills": [
    "ANDROID",
    "ANGULARJS",
  ],
  "status": "ACTIVE",
  "title": "Testing 2",
  "updated_at": Any<String>,
  "weekly_hours_higher": "13",
  "weekly_hours_lower": "12",
}
`;

exports[`projects with filter 1`] = `
{
  "items": [
    {
      "applicants": 0,
      "causes_tags": [
        "POVERTY",
      ],
      "city": "Tehran",
      "commitment_hours_higher": "13",
      "commitment_hours_lower": "12",
      "country": "IR",
      "created_at": Any<String>,
      "deleted_at": null,
      "description": "Data testing",
      "experience_level": 1,
      "expires_at": null,
      "geoname_id": null,
      "id": Any<String>,
      "identity_id": Any<String>,
      "identity_meta": Any<Object>,
      "identity_type": "organizations",
      "impact_job": true,
      "job_category": Any<Object>,
      "job_category_id": Any<String>,
      "missions": 0,
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "payment_currency": "USD",
      "payment_range_higher": "13",
      "payment_range_lower": "12",
      "payment_scheme": "FIXED",
      "payment_type": "VOLUNTEER",
      "project_length": "LESS_THAN_A_MONTH",
      "project_type": "ONE_OFF",
      "promoted": false,
      "remote_preference": "HYBRID",
      "search_tsv": "'2':2 'data':3 'test':1,4",
      "skills": [
        "ANDROID",
        "ANGULARJS",
      ],
      "status": "ACTIVE",
      "title": "Testing 2",
      "updated_at": Any<String>,
      "weekly_hours_higher": "13",
      "weekly_hours_lower": "12",
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 1,
}
`;

exports[`search projects 1`] = `
{
  "items": [
    {
      "applicants": 0,
      "causes_tags": [
        "POVERTY",
      ],
      "city": "Tehran",
      "commitment_hours_higher": "13",
      "commitment_hours_lower": "12",
      "country": "IR",
      "created_at": Any<String>,
      "deleted_at": null,
      "description": "Data testing",
      "experience_level": 1,
      "expires_at": null,
      "geoname_id": null,
      "id": Any<String>,
      "identity_id": Any<String>,
      "identity_meta": Any<Object>,
      "identity_type": "organizations",
      "impact_job": true,
      "job_category": Any<Object>,
      "job_category_id": Any<String>,
      "missions": 0,
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "payment_currency": "USD",
      "payment_range_higher": "13",
      "payment_range_lower": "12",
      "payment_scheme": "FIXED",
      "payment_type": "VOLUNTEER",
      "project_length": "LESS_THAN_A_MONTH",
      "project_type": "ONE_OFF",
      "promoted": false,
      "remote_preference": "HYBRID",
      "search_tsv": "'2':2 'data':3 'test':1,4",
      "skills": [
        "ANDROID",
        "ANGULARJS",
      ],
      "status": "ACTIVE",
      "title": "Testing 2",
      "updated_at": Any<String>,
      "weekly_hours_higher": "13",
      "weekly_hours_lower": "12",
    },
    {
      "applicants": 0,
      "causes_tags": [
        "POVERTY",
      ],
      "city": "Tokyo",
      "commitment_hours_higher": "13",
      "commitment_hours_lower": "12",
      "country": "JP",
      "created_at": Any<String>,
      "deleted_at": null,
      "description": "Data testing",
      "experience_level": 1,
      "expires_at": null,
      "geoname_id": null,
      "id": Any<String>,
      "identity_id": Any<String>,
      "identity_meta": Any<Object>,
      "identity_type": "organizations",
      "impact_job": true,
      "job_category": Any<Object>,
      "job_category_id": Any<String>,
      "missions": 0,
      "other_party_id": null,
      "other_party_title": null,
      "other_party_url": null,
      "payment_currency": "JPY",
      "payment_range_higher": "13",
      "payment_range_lower": "12",
      "payment_scheme": "FIXED",
      "payment_type": "VOLUNTEER",
      "project_length": "1_3_MONTHS",
      "project_type": "FULL_TIME",
      "promoted": false,
      "remote_preference": "HYBRID",
      "search_tsv": "'1':2 'data':3 'test':1,4",
      "skills": [
        "ANDROID",
        "ANGULARJS",
      ],
      "status": "ACTIVE",
      "title": "Testing 1",
      "updated_at": Any<String>,
      "weekly_hours_higher": "13",
      "weekly_hours_lower": "12",
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 2,
}
`;
